FIX: right sidebar overflows on bottom

--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -107,7 +107,8 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
   .list-container + span {
     .fkb-panel-sidebar,
     .fkb-panel {
-      display: block;
+      display: flex;
+      flex-direction: column;
       @media screen and (max-width: 1099px) {
         display: none;
       }
