--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -171,13 +171,8 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
       position: sticky;
       top: calc(var(--header-offset) + 2em);
       max-height: calc(100vh - 6em);
-      max-width: 100%;
+      max-width: 100%;     
       #create-topic {
-        display: flex;
-        flex: 1 1 auto;
-        justify-content: flex-start;
-        order: 5;
-        width: 100%;
         height: 45px;
         color: var(--secondary);
         border: 2px solid var(--tertiary);
@@ -215,8 +210,6 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
       }
     }
     .notifications-button {
-      order: 7;
-      margin-top: 0.5em;
       .mobile-view & {
         bottom: 1em;
         position: absolute;
@@ -262,7 +255,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     .navigation-container {
       @include bg-br;
       @media screen and (min-width: 801px) {
-        flex-direction: column;
+        display: block;
       }
       ol {
         padding: 1em 1em 0 1em;
@@ -277,8 +270,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
         }
       }
       .navigation-controls {
-        display: block;
-        width: 100%;
+        align-items: baseline;
         margin-bottom: 0;
         padding: 0 1em 1em 1em;
         @media screen and (max-width: 800px) {
