--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -105,7 +105,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     }
     &:not(.has-sidebar-page) {
       #main-outlet {
-        &.list-controls {
+        .list-controls {
           margin-left: 2em;
         }
       }
