--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -106,7 +106,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     &:not(.has-sidebar-page) {
       #main-outlet {
         .list-controls {
-          margin-left: 2em;
+          margin-right: 2em;
         }
       }
     }
