--- a/scss/mobile/fkb-m-f-nav.scss
+++ b/scss/mobile/fkb-m-f-nav.scss
@@ -29,7 +29,7 @@
         }
         .navigation-container {
           .navigation-controls {      
-            transform: translateY(-1em) scale(0);
+            bottom: calc(var(--f-nav-height) + 1em);
           }
         }
       }
@@ -69,9 +69,7 @@
             transition: transform 0.1s linear;
           }   
           .navigation-controls {
-            transform-origin: bottom;
-            transform: translateY(calc((var(--f-nav-height) * -1) - 1em));
-            transition: transform 0.1s linear;
+            bottom: calc(var(--f-nav-height) + 1em);
           }
         }
       }
