--- a/scss/mobile/fkb-m-f-nav.scss
+++ b/scss/mobile/fkb-m-f-nav.scss
@@ -47,7 +47,7 @@
       .topic-list,
       .topic-list.sticky-header {
         .topic-list-header {
-          transform: translateY(-1em)
+          transform: translateY(-1em);
         }
       }
     }
