DEPRECATION: Template should using `this`.

--- a/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-toggle-button.hbs
+++ b/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-toggle-button.hbs
@@ -1,4 +1,4 @@
-{{#unless site.mobileView}}
+{{#unless this.site.mobileView}}
   <div class="fkb-panel-toggle-button">
     <FkbPanelToggleButton />
   </div>
