--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -46,9 +46,19 @@
     .views {
       width: auto;
     }
+
+    .topic-list-data {
+      padding: unset;
+      &:last-of-type,
+      &:first-of-type {
+        padding: unset;
+      }
+    }
     
     .main-link {
+      display: block;
       @include bg-br;
+      padding: 1em;
       .mobile-view & {
         width: 100%;
       }
@@ -56,7 +66,6 @@
       
       .tli-top-section {
         display: flex;
-        padding: 0 1em;
         flex-direction: column;
         
         &__category {
@@ -114,7 +123,6 @@
       }
 
       .link-top-line {
-        padding: 0.5em 1em 0 1em;
         .topic-statuses {
           padding: 0;
         }
@@ -144,7 +152,7 @@
           height: #{$topic_image_height};
           overflow: hidden;
           width: calc(100% + 2em);
-          margin: 0.25em -1em 0 -1em;
+          margin: .25em -1em 0 -1em;
           &__backdrop {
             position: absolute;
             width: 100%;
@@ -215,7 +223,8 @@
       }
       
       .tli-bottom-section {
-        padding: 0.6em 1em;
+        display: flex;
+        padding: 0.6em 0;
         a {
           font-size: var(--font-down-1);
           display: flex;
