--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -135,7 +135,11 @@
             text-decoration: underline;
           }
         }
-      }  
+      }
+
+      .link-bottom-line {
+        display: none;
+      }
       
       .tli-middle-section {
         .topic-excerpt {
