--- a/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-sidebar.hbs
+++ b/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-sidebar.hbs
@@ -1,7 +1,7 @@
 {{#unless this.site.mobileView}}
   <div class="fkb-panel">
     {{#if this.user}}
-      <div class="fkb-panel-top" style={{this.userCardBg}}>
+      <div class="fkb-panel-top" style={{html-safe this.userCardBg}}>
         <div class="fkb-panel-contents">
           <div class="fkb-panel-contents-top">
             <div class="fkb-avatar">
