--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -48,7 +48,7 @@
       }
     }
     
-    .topic-list-item > .topic-list-data {
+    .topic-list-item > .topic-list-data:not(.bulk-select) {
       display: block;
       @include bg-br;
       padding: 1em !important;
