--- a/scss/common/fkb-c-bulk-select.scss
+++ b/scss/common/fkb-c-bulk-select.scss
@@ -124,7 +124,6 @@
         &:first-child {
           .topic-list-data {
             &.bulk-select {
-              top: 0;
               .mobile-view & {
                 padding-top: 0;
                 margin-top: -1px;
@@ -138,11 +137,8 @@
         .topic-list-data {
           &.bulk-select {
             position: absolute;
-            top: 8px;
-            .mobile-view & {
-              top: 0;
-            }
-            left: 0;          
+            top: -1em;
+            left: -1em;          
             width: 100%;
             height: 100%;
             max-width: 100%;
