--- a/scss/common/fkb-c-bulk-select.scss
+++ b/scss/common/fkb-c-bulk-select.scss
@@ -3,23 +3,22 @@
   .user-messages-page,
   body[class*="tag-"]:not(.archetype-regular):not(.archetype-banner),
   body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
-    &.bulk-select-enabled {
-      .mobile-view & {
-        .list-controls {
-          .navigation-container {
-            .navigation-controls {
-              > *:not(.dismiss-container-top) {
-                display: none;
-              }
-            }
-          }
-        }
-      }
-    }
     // Safari requires as it handle tpl as table-row and position absolute / relative not works
     .topic-list {
       .topic-list-item {
         display: block;
+      }
+    }
+    .mobile-view & {
+      .topic-list-data.bulk-select-enabled {
+        .pull-left {
+          position: absolute;
+          left: 0;
+          top: 0;
+          z-index: 3;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
     .topic-list {
