--- a/scss/common/fkb-c-bulk-select.scss
+++ b/scss/common/fkb-c-bulk-select.scss
@@ -11,13 +11,26 @@
     }
     .mobile-view & {
       .topic-list-data.bulk-select-enabled {
-        .pull-left {
+        .pull-left,
+        .pull-left label {
           position: absolute;
           left: 0;
           top: 0;
           z-index: 3;
           width: 100%;
-          height: 100%;
+          height: 100%;          
+        }
+        .pull-left {
+          display: block !important;
+          label {
+            background: rgba(var(--tertiary-rgb), 0.06);
+            border-radius: var(--d-default-border-radius);
+            input {
+              position: absolute;
+              top: 1em;
+              right: 1em;
+            }
+          }
         }
       }
     }
@@ -147,7 +160,7 @@
               flex-direction: row-reverse;
               padding: 10px;
               height: calc(100% - 36px);
-              background: rgba(var(--tertiary-rgb), 0.03);
+              background: rgba(var(--tertiary-rgb), 0.06);
               border-radius: var(--d-default-border-radius);
               .mobile-view & {
                 margin-top: 1px;
