UX: hide bulk select only on desktop unless this it duplicates the button

--- a/scss/common/fkb-c-bulk-select.scss
+++ b/scss/common/fkb-c-bulk-select.scss
@@ -85,6 +85,11 @@
           }
           th.bulk-select.topic-list-data {
             width: auto !important;
+            .desktop-view & {
+              > button.bulk-select {
+                display: none;
+              }
+            }
           }
           th.default.topic-list-data {
             .bulk-select-topics {
