--- a/scss/common/fkb-c-bulk-select.scss
+++ b/scss/common/fkb-c-bulk-select.scss
@@ -10,15 +10,24 @@
       }
     }
     .mobile-view & {
+      .topic-list-item:first-child {
+        .topic-list-data.bulk-select-enabled {
+          .pull-left,
+          .pull-left label {
+            top: 0;
+            height: calc(100% - 4px);
+          }
+        }
+      }
       .topic-list-data.bulk-select-enabled {
         .pull-left,
         .pull-left label {
           position: absolute;
           left: 0;
-          top: 0;
+          top: 4px;
           z-index: 3;
           width: 100%;
-          height: 100%;          
+          height: calc(100% - 8px);
         }
         .pull-left {
           display: block !important;
@@ -85,11 +94,6 @@
           }
           th.bulk-select.topic-list-data {
             width: auto !important;
-            .desktop-view & {
-              > button.bulk-select {
-                display: none;
-              }
-            }
           }
           th.default.topic-list-data {
             .bulk-select-topics {
@@ -138,6 +142,8 @@
         &:first-child {
           .topic-list-data {
             &.bulk-select {
+              top: 0;
+              left: 0;
               .mobile-view & {
                 padding-top: 0;
                 margin-top: -1px;
@@ -151,8 +157,8 @@
         .topic-list-data {
           &.bulk-select {
             position: absolute;
-            top: -1em;
-            left: -1em;          
+            top: 8px;
+            left: 0;
             width: 100%;
             height: 100%;
             max-width: 100%;
