--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -52,20 +52,11 @@
     .views {
       width: auto;
     }
-
-    .topic-list-data {
-      &:first-of-type {
-        padding-left: 1em;
-      }
-      &:last-of-type {
-        padding-right: 1em;
-      }
-    }
     
     .main-link {
       display: block;
       @include bg-br;
-      padding: 1em;
+      padding: 1em !important;
       max-width: 100%;
       font-size: var(--font-up-1-rem);
       
