--- a/scss/common/fkb-c-user.scss
+++ b/scss/common/fkb-c-user.scss
@@ -291,8 +291,8 @@ body.user-activity-page .bookmark-list-wrapper {
           box-shadow: none;
           border-radius: 0;
           border: none;
-          padding-left: 0;
-          padding-right: 0;
+          padding-left: 0 !important;
+          padding-right: 0 !important;
           .link-bottom-line {
             padding: 0.6em 0;
           }
