--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -52,6 +52,17 @@
     .views {
       width: auto;
     }
+
+    .topic-list-item {
+      &.highlighted {
+        animation: none;
+        .main-link {
+          @media (prefers-reduced-motion: no-preference) {
+            animation: background-fade-topiclight 2.5s ease-out;
+          }
+        }
+      }
+    }
     
     .main-link {
       display: block;
